Szoftverfejlesztők OKJ - komplex feladatsorok/Útnyilvántartás/back-end/k8s/mileage-record-deployment-bundled.yaml
# kubectl create secret docker-registry jedlik-gyor-ghcr-io-registry-secret --docker-server=ghcr.io --docker-username=bognarpal --docker-password=************************* --docker-email=bognar.pal@jedlik.eu

apiVersion: apps/v1
kind: Deployment
metadata:
  name: mileage-record-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: mileage-record
  template:
    metadata:
      labels:
        component: mileage-record
    spec:
      containers:
        - name: backend
          image: ghcr.io/bognarpal/mileage-record:1.0.0
          ports:
            - containerPort: 80
      imagePullSecrets:
        - name: jedlik-gyor-ghcr-io-registry-secret

---

apiVersion: v1
kind: Service
metadata:
  name: mileage-record-cluster-ip-service
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
  selector:
    component: mileage-record
    
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gyakorlas1-ingress-service
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    cert-manager.io/cluster-issuer: 'letsencrypt-prod'
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
    
spec:
  tls:
    - hosts:
        - gyakorlas1.cluster.jedlik.eu
      secretName: cluster-jedlik-eu
  rules:
    - host: gyakorlas1.cluster.jedlik.eu
      http:
        paths:
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: mileage-record-cluster-ip-service
                port:
                  number: 80
